# capitalism

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: Cargo.toml  docker-compose.yml
backend/migrations/2021-12-31-123129_create_accounts/: down.sql  up.sql
backend/src/: db.rs  graphql_schema.rs  main.rs  schema.rs
backend/src/bank/: graphql_schema.rs  mod.rs  models.rs  schema.rs  statement.rs  statement_handler.rs
backend/src/nordnet/: client.rs  graphql_schema.rs  mod.rs  schema.rs
frontend/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: api.rs  app.rs  main.rs  routes.rs
frontend/src/components/: button.rs  fileinput.rs  input.rs  mod.rs
frontend/src/views/: home.rs  login.rs
