[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-web-httpauth = "0.5"
awc = { version = "2.0", features=["rustls"] }
rustls = "0.17.0"
juniper = "0.15"
serde_json = "1.0.44"
