[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-web-httpauth = "0.5"
actix-multipart = "0.3"
futures-util = "0.3.19"
juniper = "0.15"
serde = "1.0.132"
serde_json = "1.0.44"
chrono = "0.4.19"
csv = "1.1.6"
encoding_rs = "0.8.30"
encoding_rs_io = "0.1.7"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
dotenv_codegen = "0.15"
log = "0.4.14"
env_logger = "0.9.0"