[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
web-sys = "0.3"
dotenv_codegen = "0.15"
reqwasm = "0.4"
base64 = "0.13"
wasm-bindgen-futures = "0.4"
log = "0.4.6"
wasm-logger = "0.2.0"
